example/errors/interpret/cannot_compare.box
when true < false {
    println("really???");
}
